--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
   <name>A Camel Scala Route</name>
 
   <properties>
+      <scala.version>2.11.12</scala.version>
+      <spark.version>2.2.0</spark.version>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
@@ -22,26 +24,26 @@
     <dependency>
       <groupId>org.scala-lang</groupId>
       <artifactId>scala-library</artifactId>
-      <version>2.11.7</version>
+        <version>${scala.version}</version>
     </dependency>
 
 
       <dependency>
           <groupId>org.apache.spark</groupId>
           <artifactId>spark-core_2.11</artifactId>
-          <version>2.1.0</version>
+          <version>${spark.version}</version>
       </dependency>
 
       <dependency>
           <groupId>org.apache.spark</groupId>
           <artifactId>spark-mllib_2.11</artifactId>
-          <version>2.1.0</version>
+          <version>${spark.version}</version>
       </dependency>
 
       <dependency>
           <groupId>org.apache.spark</groupId>
           <artifactId>spark-sql_2.11</artifactId>
-          <version>2.1.0</version>
+          <version>${spark.version}</version>
       </dependency>
 
       <!-- https://mvnrepository.com/artifact/org.jfree/jfreechart -->
@@ -56,6 +58,12 @@
           <groupId>org.joda</groupId>
           <artifactId>com.springsource.org.joda.time</artifactId>
           <version>1.6.2</version>
+      </dependency>
+
+      <dependency>
+          <groupId>mysql</groupId>
+          <artifactId>mysql-connector-java</artifactId>
+          <version>RELEASE</version>
       </dependency>
 
   </dependencies>
